# verity

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Package.swift  README.md  SECURITY.md  script.sh
.github/workflows/: check-versions.yml  ci.yml  core-build.yml  lint.yml  nightly.yml  pr-quality.yml  release-js.yml  release-kotlin.yml  release-swift.yml  release.yml  sdk-js.yml  sdk-kotlin.yml  sdk-swift.yml  security.yml
.omc/: project-memory.json
.omc/state/: agent-replay-c016f96d-5910-4bb8-b446-f087d8271168.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
circuits/: README.md
circuits/circom/: README.md
circuits/fixtures/: circuit.json  inputs.json
circuits/rust/: README.md
core/: Cargo.toml  deny.toml
core/backends/barretenberg/: Cargo.toml  backend.toml
core/backends/barretenberg/src/: lib.rs
core/dispatcher/: CMakeLists.txt  verity_backend.h  verity_dispatch.c
core/dispatcher/backends/: bb_backend.c  pk_backend.c
core/dispatcher/stub/: verity_dispatch_stub.c
core/include/: verity_ffi.h  verity_ffi_raw.h
core/release/: release-android.sh  release-ios.sh  release-js.sh
core/tools/: gen-fixtures.sh
docs/: adding-a-backend.md  adding-an-sdk.md  architecture.md  building.md  js-sdk-provekit-wasm-design.md  release.md  roadmap.md
scripts/: bump-version.sh  check-versions.sh  ensure-provekit.sh  generate-js-artifacts.sh  regenerate-schemes.sh
sdks/js/: README.md  package.json  (+3 more)
sdks/js/wasm/: .gitignore  Cargo.toml  verity_wasm.rs
tests/: gen-fixtures.sh  gen_fixtures.c
verity-kotlin/: README.md  TESTING.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
(+197 files in other folders)
