[package]
name = "barretenberg-ffi"
version = "0.1.0"
edition = "2021"
description = "C-compatible FFI bindings for the Barretenberg UltraHonk backend"

[lib]
crate-type = ["staticlib"]

[dependencies]
noir_rs = { package = "noir", git = "https://github.com/zkmopro/noir-rs", tag = "v1.0.0-beta.8", features = ["barretenberg"] }
anyhow = "1"
serde_json = "1"
toml = "0.8"
