[package]
name = "verity-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for Verity ZK proof SDK"

[lib]
crate-type = ["cdylib"]
path = "verity_wasm.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
